--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,11 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+        "files":
+            [
+                "app/Helpers/general.php"
+            ]
     },
     "autoload-dev": {
         "psr-4": {
